2001-11-30  Stephane Carrez  <Stephane.Carrez@sun.com>

	* config/sparc/sparc.c (DF_MODES_NO_S): Fix pr/3623, define to
	accept DFmode and DImode only.

2001-11-20  Zoltan Hidvegi <hzoli@hzoli.2y.net>

	* doloop.c (doloop_modify_runtime): Correct calculation of
	iterations. 
	* unroll.c (unroll_loop): Correct special exit cases.

2001-11-30  Jakub Jelinek  <jakub@redhat.com>

	* config/sparc/sparc.md (movdf): Avoid calling validize_mem during
	or after reload.

2001-11-27  John David Anglin  <dave@hiauly1.hia.nrc.ca>
	Bruce Korb <bkorb@gnu.org>

	* inclhack.def (AAA_time): Delete.
	(hpux_size_t): Revise select and fix for HP-UX 11.11.
	(hpux11_vsnprintf): Adapt to above hack.

2001-08-14  Steve Ellcey <sje@cup.hp.com>

	* tlink.c (scan_linker_output): Check string for unsatisfied in
	addition to undefined and unresolved.

2001-11-29  Zoltan Hidvegi  <hzoli@hzoli.2y.net>

	* doloop.c (doloop_valid_p): Check for LTU and GTU as well.

2001-11-29  Richard Henderson  <rth@redhat.com>

	* ifcvt.c (noce_try_store_flag_constants): Test for overflow
	in computing DIFF.

2001-11-29  Craig Rodrigues  <rodrigc@gcc.gnu.org>

	PR other/4932
	* config/i386/i386.c (print_operand):  Verify that the
	  argument to %c is a constant and not a conditional which
	  needs to be reversed.

2001-11-27  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* gcc.c (set_input): Export.
	Move declaration ...
	gcc.h (set_input): ... here.

2001-11-27  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* gcc.c (set_collect_gcc_options): New function, split out from
	main.
	Ignore elided switches.
	(do_spec): Invoke before executing command.
	(do_spec_1): Likewise.
	Fixes PR other/3968.

2001-11-27  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* config/i386/sol2.h (WINT_TYPE): Redefine.
	(WINT_TYPE_SIZE): Likewise.

2001-11-26  Ian Lance Taylor  <ian@zembu.com>

	* config/i386/i386.md (movstrsi): Use strmovqi rather than
	strmovsi for final byte move.

2001-11-26  Alan Modra  <amodra@bigpond.net.au>
