@@ -105,6 +105,7 @@
 
 #if defined(_CALL_AIXDESC)
 #define FUNC_NAME(name) GLUE(.,name)
+#define JUMP_TARGET(name) FUNC_NAME(name)
 #define FUNC_START(name) \
 	.section DESC_SECTION,"aw"; \
 name: \
@@ -123,6 +124,7 @@ GLUE(.L,name): \
 
 #elif defined(__WINNT__)
 #define FUNC_NAME(name) GLUE(..,name)
+#define JUMP_TARGET(name) FUNC_NAME(name)
 #define FUNC_START(name) \
 	.pdata; \
 	.align 2; \
@@ -141,6 +143,7 @@ GLUE(FE_MOT_RESVD..,name):
 
 #elif defined(_CALL_NT)
 #define FUNC_NAME(name) GLUE(..,name)
+#define JUMP_TARGET(name) FUNC_NAME(name)
 #define FUNC_START(name) \
 	.section DESC_SECTION,"aw"; \
 name: \
@@ -158,6 +161,11 @@ GLUE(.L,name): \
 
 #else
 #define FUNC_NAME(name) GLUE(__USER_LABEL_PREFIX__,name)
+#if defined __PIC__ || defined __pic__
+#define JUMP_TARGET(name) FUNC_NAME(name@plt)
+#else
+#define JUMP_TARGET(name) FUNC_NAME(name)
+#endif
 #define FUNC_START(name) \
 	.type FUNC_NAME(name),@function; \
 	.globl FUNC_NAME(name); \
